--- a/res/layout/fragment_umsatzanzeige.xml
+++ b/res/layout/fragment_umsatzanzeige.xml
@@ -10,6 +10,31 @@
         android:layout_marginLeft="10dp"
         android:orientation="vertical" >
 
+        <TableLayout 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp" >
+            
+         <TableRow
+                android:id="@+id/tableRow7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" >
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kontoauswahl"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <Spinner
+                    android:id="@+id/kontospinner"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" />
+            </TableRow>
+        </TableLayout>
+        
         <TextView
             android:id="@+id/umsatzmoney"
             android:layout_width="wrap_content"
