--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
      <item name="orange" type="color">#FF7609</item>
      <item name="green" type="color">#00FF00</item>
+     <item name="red" type="color">#FF0000</item>
 </resources>
