--- a/res/layout/fragment_kontoverwaltung.xml
+++ b/res/layout/fragment_kontoverwaltung.xml
@@ -49,7 +49,48 @@
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
+        
+        <TextView
+            android:id="@+id/textView93"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
+            android:text="Eine neue Sperrrufnummer hinterlegen."
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal"
+            android:paddingBottom="1.0dip"
+            android:paddingLeft="4.0dip"
+            android:paddingRight="4.0dip"
+            android:paddingTop="5.0dip" >
+
+            <Button
+                android:id="@+id/neueSperrrufnummerAnlegen"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1.0"
+                android:background="@drawable/buttonbg"
+                android:onClick="neueSperrrufnummerAnlegen"
+                android:text="Neue Sperrrufnummer anlegen"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:visibility="visible" />
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" />
+        
+       
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
