click button color changed

--- a/res/layout/fragment_checktransaction.xml
+++ b/res/layout/fragment_checktransaction.xml
@@ -213,7 +213,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="goBack"
                 android:text="@string/goback_button"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -224,7 +224,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="notimplemented"
                 android:text="@string/ueberweisung_weiter"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
