--- a/res/layout/fragment_kontoverwaltung.xml
+++ b/res/layout/fragment_kontoverwaltung.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="neuesBankkontoAnlegen"
                 android:text="Neues Bankkonto hinzufügen"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -77,7 +77,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="neueSperrrufnummerAnlegen"
                 android:text="Neue Sperrrufnummer anlegen"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -124,7 +124,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1.0"
-                    android:background="@drawable/buttonbg"
+                    android:background="@layout/button_custom"
                     android:onClick="bankkontoEntfernen"
                     android:text="Ein Bankkonto entfernen"
                     android:textAppearance="?android:attr/textAppearanceSmall"
@@ -162,7 +162,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1.0"
-                    android:background="@drawable/buttonbg"
+                    android:background="@layout/button_custom"
                     android:onClick="deleteAccount"
                     android:text="@string/delete_button"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
