--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -52,7 +52,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="erstelleAcount"
                 android:text="Neuer Account"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -64,7 +64,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="login"
                 android:text="Einloggen"
                 android:textAppearance="?android:attr/textAppearanceSmall"
