--- a/res/layout/fragment_neueraccount.xml
+++ b/res/layout/fragment_neueraccount.xml
@@ -77,7 +77,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="ausfuehren"
                 android:text="Ausführen"
                 android:textAppearance="?android:attr/textAppearanceSmall"
