--- a/res/layout/fragment_ueberweisung.xml
+++ b/res/layout/fragment_ueberweisung.xml
@@ -240,7 +240,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="abbrechen"
                 android:text="@string/abbrechen_button"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -251,7 +251,7 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1.0"
-                android:background="@drawable/buttonbg"
+                android:background="@layout/button_custom"
                 android:onClick="ueberweisungFortfahren"
                 android:text="@string/ueberweisung_weiter"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
