--- a/res/layout/fragment_sperrenoverview.xml
+++ b/res/layout/fragment_sperrenoverview.xml
@@ -6,18 +6,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView23"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearlayoutsperrenoverview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:layout_marginTop="20dp"
-            android:text="Sperren Overview"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:paddingBottom="1.0dip"
+            android:paddingLeft="4.0dip"
+            android:paddingRight="4.0dip"
+            android:paddingTop="5.0dip" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1.0"
+                android:background="@layout/button_custom"
+                android:onClick="neueSperrrufnummerAnlegen"
+                android:text="Rufnummer anlegen"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView30"
